# EnergyPredictionApp

./: .gitignore  RenderHow.md  main.py  pyproject.toml  streamlitapp.py  useModel.py
static/: index.html  index_model.html
