[project]
name = "energypredictionapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "polars>=1.39.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]
